css/index-style.css
/* ... */
.container-nav-mobile.active {
  display: block;
}

/* conteudo principal */

/* bg radial */
.container {
  height: 100vh;
  background: radial-gradient(
    circle,
    rgba(0, 82, 106, 1) 0%,
    rgba(0, 51, 66, 1) 52%,
    rgba(0, 30, 40, 1) 100%
  );
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.button-descont-nav{
  /* position: absolute; */
  position: fixed;
  left: 30px;
  bottom: 30px;
}

.button-descont-nav a img{
  width: 70px;
}

.container-conteudo {
  width: 70%;
  display: flex;
  gap: 20px;
  align-items: center;
}

/* container texto */
.container-texto {
  display: block;
  flex-direction: column;
  width: 50%;
  height: 100%;
}

.container-conteudo h1 {
  font-size: 48px;
  color: white;
  line-height: 60px;
}

.container-conteudo p {
  font-size: 16px;
  line-height: 1.6;
  color: white;
  margin: 20px 0;
}

.div-button {
  display: block;
  width: 300px;
}

.container-conteudo-link {
  background-color: #00eb84;
  text-align: center;
  display: block;
  font-size: 16px;
  font-weight: bold;
  color: #180a29;
  padding: 16px 50px;
  border-radius: 35px;
  margin-top: 40px;
  text-decoration: none;
  transition: transform 0.3s;
}

.container-conteudo-link:hover {
  transform: scale(1.03);
}

/* container video */
.container-video {
  width: 50%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;

}

.container-video .img-fundo {
  width: 100%;
}

.container-span{
  position: absolute;
  width: 20%;
  top: 50%;
  left: 50%;
}

.container-span a img{
  width: 100%;
}

.texto-span-video {
  font-size: 16px;
  color: #00eb84;
  font-weight: 700;
  /* text-shadow: 0 2px 10px #000; */
}

.modal {
  display: none;
  position: fixed;
  z-index: 999;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
}

.modal-content {
  position: relative;
  margin: 10% auto;
  padding: 20px;
  background-color: rgba(0, 0, 0, 0.7);
  width: 80vw;
  height: 60vh;
}

.modal-content iframe {
  width: 100%;
  height: 100%;
}

.close {
  position: absolute;
  top: -40px;
  right: -10px;
  padding: 10px;
  cursor: pointer;
  color: white;
  font-size: 20px;
}

/* vantagens */

.container-vantagens {
  width: 100%;
  background-color: #00171d;
  height: 520px;
}

.content-vantagens {
  margin: 0 auto;
  width: 70%;
  text-align: center;
  color: white;
}

.content-vantagens h2 {
  font-size: 42px;
  padding-top: 40px;
  padding-bottom: 30px;
}

.content-vantagens p {
  line-height: 30px;
  margin-bottom: 50px;
}

.container-cards-vantagens {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
  width: 100%;
  align-items: center;
  justify-content: center;
}

.card-vantagens {
  height: 370px;
  width: 200px;
  background-color: #00546c;
  border-radius: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.card-vantagens p {
  line-height: 20px;
  color: #00eb84;
  font-weight: 200;
  font-size: 14px;
}

.div-card-img {
  height: 180px;
  width: 200px;
}

.div-card-img img {
  padding: 20px 0;
  width: 80px;
}

.div-line {
  border: 2px solid #00eb84;
  width: 50%;
  margin: 10px 0px 20px 0px;
}

.div-texto-card {
  height: 110px;
  width: 80%;
}

/* metodologia */

.container-metodologia {
  background-color: #e5e5e5;
  width: 100%;
  padding: 150px 0 0 0;
}

.content-metodologia {
  display: flex;
  width: 70%;
  gap: 70px;
  margin: 0 auto;
}

.div-video-metodologia {
  width: 50%;
}

.texto-metodologia {
  width: 50%;
}

.texto-metodologia h2 {
  font-size: 42px;
  font-weight: bold;
  color: #00546c;
  margin-bottom: 30px;
}

.texto-metodologia p {
  color: #00546c;
  margin-bottom: 60px;
}

.texto-metodologia a {
  background-color: #00eb84;
  color: #00171d;
  padding: 13px 50px;
  border-radius: 35px;
  text-decoration: none;
  margin-top: 40px;
}

/* como estudar */

.container-study {
  background-color: #00171d;
  height: 560px;
  display: flex;
  align-items: center;
  justify-content: center;

}

.content-study {
  width: 70%;
  margin: 0 auto;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.box-study {
  width: 360px;
  height: 500px;
  color: white;
}

.box-1 {
  text-align: end;
  padding-right: 20px;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.box-1 h2 {
  font-size: 42px;
  line-height: 51px;
}

.box-2 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.box-2 img {
  /* height: 100%; */
  width: 100%;
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
}

.box-3 {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  padding-left: 20px;
}

.box-3 p {
  margin-bottom: 30px;
  font-size: 15px;
  font-weight: 200;
}

.box-3 a {
  padding: 13px 50px;
  background-color: #00eb84;
  border-radius: 35px;
  text-decoration: none;
  color: #00171d;
}

.font-span-box-3 {
  font-size: 20px;
  font-weight: bold;
}

.div-button-study{
  width: 100%;
  display: flex;
  justify-content: center;
}

/* para quem */

.container-para-quem {
  width: 100%;
  padding: 150px 0;
  background-color: white;
}

.content-para-quem {
  width: 70%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  gap: 30px;
}

.div-img-para-quem {
  width: calc(50% - 15px);
  height: 100%;
  display: flex;
  align-items: start;
  justify-content: flex-start;
}

.div-img-para-quem img {
  width: 100%;
}

.div-texto-para-quem {
  width: calc(50% - 15px);
}

.div-texto-para-quem h2 {
  font-size: 42px;
  color: #00171d;
  line-height: 40px;
}

.div-texto-para-quem p {
  color: #00171d;
  padding: 30px 0;
  margin-bottom: 20px;
}

.div-texto-para-quem a {
  padding: 13px 50px;
  background-color: #00eb84;
  border-radius: 35px;
  text-decoration: none;
  color: #00171d;
}
/* ... */

